# ChangeLog for dev-perl/Template-XML
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/Template-XML/ChangeLog,v 1.26 2009/12/23 19:43:08 grobian Exp $

  23 Dec 2009; Fabian Groffen <grobian@gentoo.org>
  Template-XML-2.17-r1.ebuild:
  Marked ~x86-solaris, bug #296509

  16 Aug 2009; Torsten Veller <tove@gentoo.org>
  -files/bug-144689-branch-2.16.patch:
  Remove unused patch

  13 Dec 2008; Alexis Ballier <aballier@gentoo.org>
  Template-XML-2.17-r1.ebuild:
  keyword ~x86-fbsd

  30 Sep 2008; Torsten Veller <tove@gentoo.org>
  -Template-XML-2.16-r1.ebuild, -Template-XML-2.17.ebuild,
  Template-XML-2.17-r1.ebuild:
  Cleanup

  13 Jul 2007; Raúl Porcel <armin76@gentoo.org>
  Template-XML-2.17-r1.ebuild:
  alpha/x86 stable

  07 Jul 2007; Tom Gall <tgall@gentoo.org> Template-XML-2.17-r1.ebuild:
  stable on ppc64

  05 May 2007; Tobias Scherbaum <dertobi123@gentoo.org>
  Template-XML-2.17-r1.ebuild:
  ppc stable

  23 Apr 2007; Raúl Porcel <armin76@gentoo.org>
  Template-XML-2.17-r1.ebuild:
  ia64 stable

  16 Apr 2007; Markus Rothe <corsair@gentoo.org>
  Template-XML-2.16-r1.ebuild:
  Stable on ppc64

*Template-XML-2.17-r1 (15 Apr 2007)

  15 Apr 2007; Michael Cummings <mcummings@gentoo.org>
  +files/bug-144689-branch-2.17.patch, +Template-XML-2.17-r1.ebuild:
  Bug 167699, which is really a reminder of bug 144689. Thanks John :)

  14 Apr 2007; Michael Cummings <mcummings@gentoo.org>
  Template-XML-2.17.ebuild:
  sparc stable

  09 Apr 2007; Michael Cummings <mcummings@gentoo.org>
  Template-XML-2.17.ebuild:
  Marking stable amd64

  04 Mar 2007; Christian Faulhammer <opfer@gentoo.org>
  Template-XML-2.16-r1.ebuild:
  stable x86; bug 141638

*Template-XML-2.17 (17 Feb 2007)

  17 Feb 2007; Michael Cummings <mcummings@gentoo.org>
  +Template-XML-2.17.ebuild:
  Version bump

  23 Jan 2007; Bryan Østergaard <kloeri@gentoo.org>
  Template-XML-2.16-r1.ebuild:
  Add ~ia64 keyword.
