@@ -3,13 +3,13 @@ Hash: SHA1
 
 AUX bug-144689-branch-2.17.patch 475 RMD160 9ca8e75db065e6346e5f3e1811aeb15116c01524 SHA1 89983889c96b317dd3626503211df7e55bd38fac SHA256 ecb16c0e9966185413b8e70e96dad6b72c13b6203ab864427f3b51097f041c69
 DIST Template-XML-2.17.tar.gz 26496 RMD160 32580d81ea05193b2dfd0c33254f3d5fb0cd8a78 SHA1 43782e6fca31c2ca3ab3bc2a1263af470649c936 SHA256 a73b242ef20870187e1bbd0ceed864e65f7cec1b5fd40aae086182676d4cad85
-EBUILD Template-XML-2.17-r1.ebuild 674 RMD160 1bd0571e6996a0de298acb4f7f55bf326a0210ab SHA1 41f0631542be957f2e63d3d642742af60f9e23a5 SHA256 1130ab94e2dcfb7d0af8a0f7ab49c5d17b54257b4d9932ae87eb89c6edff79ee
-MISC ChangeLog 3362 RMD160 06798f2a48a9b7fb30052c2ae211aed66d380e3f SHA1 847a6d8ddb709d574bc5e721e58fb168c29a06d3 SHA256 476c90e55b5506e3692b591635359fe810aeba3b888976945a7e3ed24de8f87e
+EBUILD Template-XML-2.17-r1.ebuild 679 RMD160 c7fc7a77ff53ad5d38fa5020580f57c24de30b2a SHA1 ebcf56f7b053ea2e10a111bee9d3bc106c03e1ac SHA256 c4f5062a98a899ab04b45d56989f09472141f1ddbe2f6d75bcae1e034df6c840
+MISC ChangeLog 3452 RMD160 8796277001bfd2eddcd15b4324967203b103950a SHA1 456c87d71e2887de3c0a44a74188d782a5c0d94b SHA256 f812b6705a8f872bc9a84f378ba3dcc7779c29f6eb77ac39d715456f2c52e0c9
 MISC metadata.xml 238 RMD160 460aa3616f72e26a997127596bfbaf65386bcbec SHA1 329cf9149cfccd424e94daf5400b49e0b3277457 SHA256 830d1ee2370e276637db52ad34c4a02ac757664f8fa08322f71db11f1ad127e1
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.16 (GNU/Linux)
 
-iEYEARECAAYFAkyPf14ACgkQV3J2n04EauzZ0ACeL3+yxEO0yccUYvgvmchAiLrq
-S+gAni3jiC7nwTBKkaAfTizpJyMFtmhc
-=OelK
+iEYEARECAAYFAk29mYkACgkQuQc30/atMkBBXQCeKxxwv4zLuid2yZMdhYr38oi5
+wykAnAsK4xzvoc3dZd7EM89CpEgmN+zF
+=UYEq
 -----END PGP SIGNATURE-----
